--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "markdown-it-anchor": "^5.2.4",
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
+    "markdown-it-fancy-lists": "^1.2.1",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-toc-done-right": "^4.0.1",
